--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,6 @@ services:
       - .:/code
     ports:
       - "8000:8000"
-    dns_search: cr3.dbmi.pitt.edu
+    dns_search: data.aurorabreastcancer.org
     restart: always
 
