add clinical data export

--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -11,17 +11,43 @@ server {
     # the port your site will be served on, default_server indicates that this server block
     # is the block to use if no blocks match the server_name
 #    listen 8005 default_server;
-    listen 4435 default_server;
+    listen 4435 ssl;
+#    allow 130.49.179.58;
+#    allow 192.168.1.136;
+#    allow 192.168.1.1/24;
+#    deny all;
 
+    location /checkauth {
+       proxy_pass http://aurorabreastcancer.org/checkauth;
+       proxy_pass_request_body off;
+       proxy_set_header Content-Length "";
+    }
+
+    location /ddp {
+       auth_request /checkauth;
+       error_page 401 /;
+    }
+    
     ssl on;
     ssl_certificate     /etc/ssl/cbio_aurorabreastcancer_org.crt;
     ssl_certificate_key /etc/ssl/cbio_aurorabreastcancer_org.key;
-    ssl_ciphers         EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
-#    ssl_protocols       TLSv1.1 TLSv1.2;
-    ssl_protocols       TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers  ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+#    ssl_protocols       TLSv1.2;
     # the domain name it will serve for
-    server_name cbio.aurorabreastcancer.org; # substitute your machine's IP address or FQDN
+    #server_name cbio.aurorabreastcancer.org; # substitute your machine's IP address or FQDN
     charset     utf-8;
+
+    # Enable HSTS
+    add_header Strict-Transport-Security "max-age=31536000" always;
+
+    # Optimize session cache
+    ssl_session_cache   shared:SSL:40m;
+    ssl_session_timeout 4h;
+
+    # Enable session tickets
+    ssl_session_tickets on;
 
     # max upload size
     client_max_body_size 75M;   # adjust to taste
