--- a/elasticsearch/docker-compose.yml
+++ b/elasticsearch/docker-compose.yml
@@ -2,9 +2,12 @@ version: '3.7'
 
 services:
   es01:
-    image: elasticsearch:${ELASTIC_VERSION}
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
     container_name: elasticsearch 
     environment:
+      - http.host=0.0.0.0
+      - transport.host=127.0.0.1
+      - node.name=es01
       - cluster.name=esddp
       - bootstrap.memory_lock=true
       - discovery.type=single-node
@@ -13,18 +16,16 @@ services:
       memlock:
         soft: -1
         hard: -1
-    restart: on-failure
+    restart: always 
     volumes:
-      - esdata1:/usr/share/elasticsearch/data
+      - esdata01:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
     networks:
-      - data-portal_default
+      - es01
 volumes:
-  esdata1:
-    driver: local
-
+    esdata01:
+      driver: local
 networks:
-  data-portal_default:
-         external: true
-
+    es01:
+      driver: bridge
